Now stores progress between boots
also has a dropdown of your subjects with the hours studied nad percent through goal
also slightly prettier